# test_app_api

./: .gitignore  Dockerfile  README.md  api-documentation.html  docker-compose.yml  pyproject.toml
app_api/: pytest.ini
app_api/app_api/: settings.py  urls.py
app_api/core/: models.py  urls.py  utils.py
app_api/core/api/: serializers.py  views.py
app_api/core/migrations/: 0001_initial.py
app_api/core/tests/: test_app_api.py
